--- a/main.html
+++ b/main.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-
 <html>
+  <head>
+    <title>Decimal to Binary Conversion</title>
+  </head>
+  <body>
+    <div>
+      <label for="decimalNumber">Enter the decimal number:</label>
+      <input type="number" id="decimalNumber" />
+    </div>
+    <button onclick="convertToBinary()">Convert to Binary</button>
+    <div id="result"></div>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
